# customore_case_study

backend_tasks/: .gitignore  README.md  docker-compose.yml
backend_tasks/delivery-server/: Dockerfile  manage.py  pyproject.toml
backend_tasks/delivery-server/delivery/: apps.py  asgi.py  models.py  urls.py  wsgi.py
backend_tasks/delivery-server/delivery/configs/: base.py  settings.py
backend_tasks/delivery-server/delivery/management/commands/: seed_10_tasks.py
backend_tasks/delivery-server/delivery/migrations/: 0001_initial.py
backend_tasks/delivery-server/delivery/services/: health_check.py
backend_tasks/delivery-server/delivery/services/auth/: auth.py  serializer.py  view.py
backend_tasks/delivery-server/delivery/services/tasks/: serializer.py  view.py
backend_tasks/delivery-server/delivery/utils/: decorators.py  redis.py  s3.py  validation.py
backend_tasks/init/nginx/: Dockerfile
backend_tasks/init/seaweedfs/: Dockerfile  storage.configs.json
weather_app/: .gitignore  README.md  apikeyinput_frame.py  app.py  main_frame.py  requirements.txt
weather_app/seed/: worldcities.csv
